Add Skript, attempted chunk loading rewrite