@@ -3,7 +3,6 @@ package dev.ultreon.quantum.client;
 import java.io.File;
 import java.util.Arrays;
 import java.util.List;
-import java.util.function.Consumer;
 
 import org.jetbrains.annotations.NotNull;
 
@@ -29,7 +28,7 @@ public class CrashScreen extends Screen {
     /**
      * List of stack elements to be ignored in crash logs.
      */
-    private static final List<String> UNUSABLE_STACK_ELEMENTS = Arrays.asList(
+    private static final List<String> UNUSABLE_STACK_ELEMENTS = List.of(
             "dev.ultreon.quantum.crash.", // Crash handling
             "java.", "javax.", "javafx.", // Java packages
             "kotlin.", "kotlinx.",        // Kotlin packages
@@ -101,15 +100,10 @@ public class CrashScreen extends Screen {
         File destination = new File("crash-reports/" + CrashLog.getFileNameWithoutExt() + "-loading.txt");
 
         // Write each crash log to the specified file
-        Consumer<CrashLog> action = Utils.with(destination, CrashLog::writeToFile);
-        for (CrashLog crashLog : crashes) {
-            action.accept(crashLog);
-        }
+        crashes.forEach(Utils.with(destination, CrashLog::writeToFile));
 
         // Write each crash log to the log
-        for (CrashLog crash : crashes) {
-            crash.writeToLog();
-        }
+        crashes.forEach(CrashLog::writeToLog);
     }
 
     /**
@@ -147,15 +141,11 @@ public class CrashScreen extends Screen {
         String errorMessage = message == null ? "<No message>" : message.trim().replace("\n", " ").replace("\t", "").replace("java.lang.", "");
 
         // Get the first usable stack id from the throwable stack trace
-        String found = "<Unknown>";
-        for (StackTraceElement stackTraceElement : throwable.getStackTrace()) {
-            if (isUsableStackElement(stackTraceElement)) {
-                String string = stackTraceElement.toString();
-                found = string;
-                break;
-            }
-        }
-        String usableStackTrace = found
+        String usableStackTrace = Arrays.stream(throwable.getStackTrace())
+                .filter(CrashScreen::isUsableStackElement)
+                .map(StackTraceElement::toString)
+                .findFirst()
+                .orElse("<Unknown>")
                 .trim();
 
         // Render the crash log details using the renderer
