@@ -6,7 +6,6 @@ package dev.ultreon.quantum.client.gui;
 
 import dev.ultreon.quantum.client.gui.widget.Widget;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 
@@ -31,7 +30,7 @@ public class UIPath {
      * @param component the component.
      */
     public UIPath(Widget component) {
-        this.components = new ArrayList<>(Arrays.asList(component));
+        this.components = new ArrayList<>(List.of(component));
     }
 
     /**
