@@ -8,7 +8,6 @@ import dev.ultreon.quantum.registry.Registries;
 import dev.ultreon.quantum.ubo.types.MapType;
 import dev.ultreon.quantum.util.NamespaceID;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class ItemStackArgumentType implements ArgumentType<ItemStack> {
@@ -77,7 +76,7 @@ public class ItemStackArgumentType implements ArgumentType<ItemStack> {
 
     @Override
     public List<String> getExamples() {
-        return Arrays.asList(
+        return List.of(
                 "quantum:stone",
                 "quantum:path/to/value",
                 "stone",
