@@ -4,7 +4,6 @@ import dev.ultreon.quantum.api.neocommand.CommandParseException;
 import dev.ultreon.quantum.api.neocommand.CommandReader;
 import dev.ultreon.quantum.api.neocommand.SuggestionProvider;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class LiteralArgumentType implements ArgumentType<String> {
@@ -31,6 +30,6 @@ public class LiteralArgumentType implements ArgumentType<String> {
 
     @Override
     public List<String> getExamples() {
-        return Arrays.asList(literal);
+        return List.of(literal);
     }
 }
