@@ -14,7 +14,6 @@ import dev.ultreon.quantum.world.container.FuelRegistry;
 import dev.ultreon.quantum.world.vec.BlockVec;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class BlastFurnaceBlockEntity
@@ -145,12 +144,12 @@ public class BlastFurnaceBlockEntity
 
     @Override
     public List<ItemSlot> getInputs() {
-        return Arrays.asList(this.getInputSlot());
+        return List.of(this.getInputSlot());
     }
 
     @Override
     public List<ItemSlot> getOutputs() {
-        return Arrays.asList(this.getOutputSlot());
+        return List.of(this.getOutputSlot());
     }
 
     @Override
