@@ -9,11 +9,9 @@ import dev.ultreon.quantum.world.vec.BlockVec;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class CrateMenu extends BlockContainerMenu {
     public final ItemSlot[][] crate = new ItemSlot[9][3];
@@ -102,21 +100,16 @@ public class CrateMenu extends BlockContainerMenu {
 
     @Override
     public List<ItemSlot> getInputs() {
-        return Arrays.asList();
+        return List.of();
     }
 
     @Override
     public List<ItemSlot> getOutputs() {
-        return Arrays.asList();
+        return List.of();
     }
 
     @Override
     public @NotNull Iterator<ItemStack> iterator() {
-        List<ItemStack> list = new ArrayList<>();
-        for (ItemSlot slot : slots) {
-            ItemStack item = slot.getItem();
-            list.add(item);
-        }
-        return list.iterator();
+        return Arrays.stream(slots).map(ItemSlot::getItem).iterator();
     }
 }
