@@ -3,16 +3,15 @@ package dev.ultreon.quantum.world.loot;
 import dev.ultreon.quantum.item.ItemStack;
 import dev.ultreon.quantum.world.rng.RNG;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class ConstantLoot implements LootGenerator {
     public static final LootGenerator EMPTY = new ConstantLoot();
     private final List<ItemStack> loot;
 
     public ConstantLoot(ItemStack... loot) {
-        this.loot = Arrays.asList(loot);
+        this.loot = List.of(loot);
     }
 
     public ConstantLoot(List<ItemStack> loot) {
@@ -21,11 +20,6 @@ public class ConstantLoot implements LootGenerator {
 
     @Override
     public Iterable<ItemStack> generate(RNG random) {
-        List<ItemStack> list = new ArrayList<>();
-        for (ItemStack itemStack : this.loot) {
-            ItemStack copy = itemStack.copy();
-            list.add(copy);
-        }
-        return list;
+        return this.loot.stream().map(ItemStack::copy).collect(Collectors.toList());
     }
 }
